apps/stablediffusion/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sd
  labels:
    app: sd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sd
  template:
    metadata:
      labels:
        app: sd
      annotations:
        diun.enable: "true"
    spec:
      runtimeClassName: nvidia
      volumes:
        - name: sd-nfs
          persistentVolumeClaim:
            claimName: sd-nfs
      containers:
        - name: sd
          image: tukirito/sygil-webui:latest
          ports:
            - containerPort: 8501
          volumeMounts:
            - name: sd
              mountPath: /sd/outputs
      nodeSelector:
          kubernetes.io/arch: amd64
          workload: gpu
