apps/stablediffusion/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sd
  labels:
    app: sd
spec:
  type: NodePort
  ports:
    - port: 8501
      protocol: TCP
  selector:
    app: sd
