apps/stablediffusion/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: sd.kube.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sd
            port:
              number: 8501
